<resources>

    <string name="api_key">AIzaSyBlPsNhZMoLgo9G5OWt42irc1xWEQXJrw4</string>


    <string name="app_name">WhyNotHere</string>
    <string name="logowhynothere">LogoWhyNotHere</string>

    <string name="hint_nome">Nome</string>
    <string name="hint_cognome">Cognome</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Ripeti password</string>
    <string name="hint_bio">Bio..</string>

    <string name="registrati">REGISTRATI</string>
    <string name="title_activity_maps">Map</string>
    <string name="invalid_username">Email non valida</string>
    <string name="invalid_password">La Password deve essere >8 caratteri</string>
    <string name="title_activity_maps_home">Map</string>


    <string name="newPlaceButtonID">New Place</string>

    <string name="login">LOGIN</string>
    <string name="cancelButtonID">ANNULLA</string>
    <string name="addButtonID">AGGIUNGI</string>
    <string name="delete">ELIMINA</string>
    <string name="back">INDIETRO</string>
    <string name="addPhotoButtonID">+</string>

    <string name="titleID">Aggiungi un titolo . .</string>
    <string name="descriptionID">Aggiungi una descrizione . .</string>

    <string name="photoContentDescription">sample_image</string>

    <string name="map_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCpXrkwVRYRYJS6MS9eTMAH2a1UZq9VYsw</string>
    <string name="location_gps_alretDialog_tittle">ATTENZIONE</string>
    <string name="location_gps_alretDialog_msg">Abilitare il GPS per procedere.</string>
    <string name="yes">OK</string>
    <string name="no">NO</string>
    <string name="addPhotoTextID">Aggiungi foto</string>

    <string name="titleExample">Oratino</string>
    <string name="descriptionExample">Bellissimo posto!!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="conferma">CONFERMA</string>


</resources>