<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color">

    <fragment
        android:id="@+id/google_map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="318dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewID"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        app:cardBackgroundColor="@color/cardBackgroundColor"
        app:cardCornerRadius="25dp"
        app:cardElevation="15dp"
        app:layout_constraintBottom_toTopOf="@id/navigationBarLayoutID"
        app:layout_constraintTop_toBottomOf="@+id/google_map"
        tools:layout_editor_absoluteX="5dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/formLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progressBar"
                style="@style/Widget.AppCompat.ProgressBar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="40dp"
                android:indeterminate="true"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintTop" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintTop"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/titleNewPlaceID"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="3dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="3dp"
                    android:background="@drawable/custom_input"
                    android:drawableStart="@drawable/custom_title_icon"
                    android:drawablePadding="12dp"
                    android:hint="@string/titleID"
                    android:paddingStart="10dp"
                    android:paddingEnd="12dp"
                    android:singleLine="false"
                    android:textColor="#024064"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </EditText>

                <EditText
                    android:id="@+id/descriptionNewPlaceID"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="3dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="3dp"
                    android:background="@drawable/custom_input"
                    android:drawableStart="@drawable/custom_description_icon"
                    android:drawablePadding="12dp"
                    android:foregroundGravity=""
                    android:gravity="top"
                    android:hint="@string/descriptionID"
                    android:inputType="textLongMessage|textMultiLine"
                    android:lines="4"
                    android:maxLines="5"
                    android:minHeight="50dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="15dp"
                    android:textColor="#024064"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/titleNewPlaceID">

                </EditText>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/imagesLayoutID"
                android:layout_width="match_parent"
                android:visibility="visible"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintTop">


                <Button
                    android:id="@+id/button_add_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/custom_add_photo_button"
                    android:drawableStart="@drawable/ic_add_to_photos"
                    android:padding="8dp"
                    android:text="@string/addPhotoTextID"
                    android:textColor="#FEFED3"
                    android:textSize="13sp"
                    app:layout_constraintEnd_toStartOf="@+id/confirmPlaceButtonID"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/confirmPlaceButtonID"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/custom_button"
                    android:onClick="onClickAddPlace"
                    android:src="@drawable/ic_check_circle_24"
                    app:layout_constraintEnd_toEndOf="parent"

                    app:layout_constraintStart_toEndOf="@+id/button_add_photo"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/button_add_photo">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/list1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    </androidx.recyclerview.widget.RecyclerView>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>




        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:id="@+id/navigationBarLayoutID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">


        <ImageButton
            android:id="@+id/nearlyButtonID"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_button_white"
            android:onClick="onClickNearlyButton"
            android:src="@drawable/ic_near"
            android:tint="@color/colorGreenGradientDark"

            />


        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/navigationBarNewPlace"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_button_white"
            app:itemIconSize="30dp"

            app:itemTextColor="@color/colorGreenGradientDark"
            app:menu="@menu/menu_navigation" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>